# GmToolBox

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  osCOMP.code-workspace  platformio.ini  中期报告.md  工作记录.md  成果.md  核心成果.md
doc/: GmSSL-Documentation.md  GmToolBox-Documentation.md  Platform IO x FreeRTOS 环境搭建.md  SM3密码杂凑算法.md  SM4分组密码算法.md  实现思路.md  成果.md  项目要求.md
doc/expeiment/: 实验一报告范例.md  实验三报告范例.md  实验三要求.md  实验二报告范例.md  实验二要求.md
doc/experiment/: 实验一报告范例.md  实验一要求.md  实验三报告范例.md  实验三要求.md  实验二报告范例.md  实验二要求.md
include/: block_cipher.h  features.h  gcm.h  gmssl_cfg.h  padding.h  shared.h  sm3.h
lib/gmssl/: README.md
lib/gmssl/include/: gcm.h  sm3.h
lib/gmssl/src/: sm4_enc.c
lib/lcd_ov5640/: dvp_camera.c  dvp_camera.h  main.c
src/: README.md  aes.c  aes_modes.c  block_cipher.c  gcm.c  gf128.c  hello.c  hex.c  main.c  padding.c  rand.c  sm3-steam.c  sm3-stream.c  sm3.c  sm4_lcl.h  sm4_modes.c  sm4_setkey.c
test/: README  Readme.md  firmware.sh  semaphore_test.c  sm3-test-x86.cpp  sm3-test.c  sm3test.c  sm4test.c
